--- a/docs/md/note/math/常微分方程.md
+++ b/docs/md/note/math/常微分方程.md
@@ -8,10 +8,21 @@
 ## 前置课程
 数学分析一二、高等代数与解析几何一二（或更高级的课程）
 ## 课程特点
-ODE是一门技巧性比较强、计算量比较大的课程，我认为难度算数学院专业课里最简单的之一。这门课内容很多，老师讲的主要分为了三块内容：
+ODE是一门技巧性比较强、计算量比较大的课程，我认为难度算数学院专业课里最简单的之一。
+需要较多的分析和代数的前置知识，想要学好的话数分高代肯定要学好。
 
+## 课程内容
+这门课内容很多，老师讲的主要分为了三块内容：
 - 解ODE
 - 分析ODE
 - 简单的PDE
 
-3.5学分一下的课程的内容主要是第一部分，而这门课的难度也集中在第二部分，第三部分期末和小测都不会涉及。ODE需要较多的分析和代数的前置知识
+3.5学分一下的课程的内容主要是第一部分，而这门课的难度也集中在第二部分，第三部分期末和小测都不会涉及。
+### **解ODE：计算**
+这里主要涉及一阶方程和高阶方程组，又细分成了一阶线性方程组、一阶非线性方程组等。
+
+重点是快速判断方程类型并且牢记方法，在考试时尽量别丢这一部分的分。
+
+$Laplace$ 变换法可能不是所有老师都会将讲，但我认为如果掌握的话这种方法也可以做救急用。
+### **分析ODE**
+这里是本课程比较抽象的部分，主要包括了解的存在唯一性、延拓性、连续依赖性和李雅普诺夫稳定性，考试的主要难度集中在这些知识点，需要多看证明
