--- a/docs/md/PY1.ipynb
+++ b/docs/md/PY1.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "abb6065a",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 31,
    "id": "797fcc42",
    "metadata": {},
    "outputs": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 32,
    "id": "a4560789",
    "metadata": {},
    "outputs": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 33,
    "id": "c675114b",
    "metadata": {},
    "outputs": [],
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 34,
    "id": "6c114b4b",
    "metadata": {},
    "outputs": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 35,
    "id": "4749f702",
    "metadata": {},
    "outputs": [
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 36,
    "id": "ca64cc33",
    "metadata": {},
    "outputs": [
@@ -172,7 +172,7 @@
        "'python'"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 37,
    "id": "c5657d14",
    "metadata": {},
    "outputs": [
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 38,
    "id": "c58b4a24",
    "metadata": {},
    "outputs": [
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 39,
    "id": "af5e286c",
    "metadata": {},
    "outputs": [
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 40,
    "id": "9102169b",
    "metadata": {},
    "outputs": [
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 41,
    "id": "b20ab0df",
    "metadata": {},
    "outputs": [
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 42,
    "id": "cecf1faf",
    "metadata": {},
    "outputs": [
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 43,
    "id": "cc5359ee",
    "metadata": {},
    "outputs": [
@@ -439,13 +439,13 @@
        "4"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(cars)  # 列表长度"
+    "len(cars)"
    ]
   },
   {
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 44,
    "id": "7a277cbd",
    "metadata": {},
    "outputs": [
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 45,
    "id": "488b5f75",
    "metadata": {},
    "outputs": [
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 46,
    "id": "bfe1ca7e",
    "metadata": {},
    "outputs": [
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 47,
    "id": "06e737ca",
    "metadata": {},
    "outputs": [
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 48,
    "id": "6222d8c0",
    "metadata": {},
    "outputs": [
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 49,
    "id": "e0922779",
    "metadata": {},
    "outputs": [],
@@ -613,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 50,
    "id": "50246622",
    "metadata": {},
    "outputs": [
@@ -652,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 51,
    "id": "304f8aba",
    "metadata": {},
    "outputs": [
@@ -687,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 52,
    "id": "edf347ac",
    "metadata": {},
    "outputs": [
@@ -716,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 57,
    "id": "fbdc21d9",
    "metadata": {},
    "outputs": [
@@ -725,20 +725,81 @@
      "output_type": "stream",
      "text": [
       "My favorite foods are:\n",
-      "['pizza', 'falafel', 'carrot cake']\n",
+      "['pizza', 'carrot cake', 'falafel']\n",
       "\n",
       "My friend's favorite foods are:\n",
-      "['pizza', 'falafel', 'carrot cake']\n"
+      "['pizza', 'carrot cake', 'falafel']\n"
      ]
     }
    ],
    "source": [
-    "my_foods = ['pizza', 'falafel', 'carrot cake']\n",
+    "my_foods = ['pizza', 'carrot cake', 'falafel']\n",
     "friend_foods = my_foods[:]\n",
     "print(\"My favorite foods are:\")\n",
     "print(my_foods)\n",
     "print(\"\\nMy friend's favorite foods are:\")\n",
     "print(friend_foods)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fc76993d",
+   "metadata": {},
+   "source": [
+    "另：按长度排序"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "991e9714",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['pizza', 'falafel', 'carrot cake']\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_foods.sort(key=len)\n",
+    "print(my_foods)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2fac6b6f",
+   "metadata": {},
+   "source": [
+    "另：二分搜索和已排序列表的维护"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "21964ff7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "6\n",
+      "[1, 2, 2, 2, 3, 4, 6, 7]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import bisect\n",
+    "\n",
+    "c = [1, 2, 2, 2, 3, 4, 7]\n",
+    "print(bisect.bisect(c,2))\n",
+    "print(bisect.bisect(c,6))\n",
+    "bisect.insort(c,6)\n",
+    "print(c)"
    ]
   },
   {
@@ -751,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 55,
    "id": "c88abbe1",
    "metadata": {},
    "outputs": [
