--- a/docs/md/PY1.ipynb
+++ b/docs/md/PY1.ipynb
@@ -5,7 +5,7 @@
    "id": "d6434bb1",
    "metadata": {},
    "source": [
-    "# 变量与简单数据类型"
+    "# chap 1-2 变量与简单数据类型"
    ]
   },
   {
@@ -224,7 +224,7 @@
    "id": "4fe3631d",
    "metadata": {},
    "source": [
-    "# 列表"
+    "# chap 3 列表"
    ]
   },
   {
@@ -453,7 +453,7 @@
    "id": "ef5d5108",
    "metadata": {},
    "source": [
-    "# 操作列表"
+    "# chap 4 操作列表"
    ]
   },
   {
@@ -812,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "id": "c88abbe1",
    "metadata": {},
    "outputs": [
