--- a/docs/md/PY2.ipynb
+++ b/docs/md/PY2.ipynb
@@ -5,7 +5,7 @@
    "id": "e954b081",
    "metadata": {},
    "source": [
-    "# if语句"
+    "# chap 5 if语句"
    ]
   },
   {
@@ -166,7 +166,7 @@
    "id": "a09dabd3",
    "metadata": {},
    "source": [
-    "# 字典"
+    "# chap 6 字典"
    ]
   },
   {
@@ -324,7 +324,7 @@
    "id": "5b95ca72",
    "metadata": {},
    "source": [
-    "# 集合"
+    "# 补充：集合"
    ]
   },
   {
@@ -398,7 +398,7 @@
    "id": "bbec405c",
    "metadata": {},
    "source": [
-    "# 用户输入和while循环"
+    "# chap 7 用户输入和while循环"
    ]
   },
   {
@@ -530,7 +530,7 @@
    "id": "d5851c6c",
    "metadata": {},
    "source": [
-    "# 函数"
+    "# chap 8 函数"
    ]
   },
   {
